Now supporting Java 1.4